{
  "version": 4,
  "terraform_version": "1.3.8",
  "serial": 557,
  "lineage": "6d6ea521-9042-2057-0474-54869f86e73f",
  "resources": [
    {
      "module": "module.web_app",
      "mode": "managed",
      "type": "aws_instance",
      "name": "webapp_instance",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-00befab162af6ea53",
            "arn": "arn:aws:ec2:us-east-1:098262602923:instance/i-07eb19e7a93128a6e",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "iam_instance_profile": "iam_profile",
            "id": "i-07eb19e7a93128a6e",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "ec2",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-04420a325650d1789",
            "private_dns": "ip-10-0-0-46.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.0.46",
            "public_ip": "44.206.226.171",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-061b000d591aca9b5",
                "volume_size": 20,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0b224ca2b927f5606",
            "tags": {
              "Name": "webapp-instance-2023-03-03T04:54:09Z"
            },
            "tags_all": {
              "Name": "webapp-instance-2023-03-03T04:54:09Z"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0b0c8ac21e087610c"
            ]
          },
          "sensitive_attributes": [
            [
              {
                "type": "get_attr",
                "value": "user_data"
              }
            ]
          ],
          "dependencies": [
            "module.web_app.aws_db_instance.rds_instance",
            "module.web_app.aws_db_parameter_group.rds_parameter_group",
            "module.web_app.aws_db_subnet_group.db_subnet_group",
            "module.web_app.aws_iam_instance_profile.iam_profile",
            "module.web_app.aws_iam_role.ec2-role",
            "module.web_app.aws_s3_bucket.s3b",
            "module.web_app.aws_security_group.app_sg",
            "module.web_app.aws_security_group.db_sg",
            "module.web_app.aws_subnet.private_subnet",
            "module.web_app.aws_subnet.public_subnet",
            "module.web_app.aws_vpc.webapp_vpc",
            "module.web_app.data.aws_availability_zones.available",
            "module.web_app.random_pet.rg"
          ]
        }
      ]
    },
    {
      "module": "module.web_app",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "webapp_igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:098262602923:internet-gateway/igw-0ffd9b388a7aa9e7e",
            "id": "igw-0ffd9b388a7aa9e7e",
            "owner_id": "098262602923",
            "vpc_id": "vpc-054014d0b6e69bd6c"
          },
          "dependencies": [
            "module.web_app.aws_vpc.webapp_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.web_app",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private_rt",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:098262602923:route-table/rtb-0e28b84cb9e86dc3f",
            "id": "rtb-0e28b84cb9e86dc3f",
            "owner_id": "098262602923",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Name": "private_route_table-vpc-054014d0b6e69bd6c"
            },
            "tags_all": {
              "Name": "private_route_table-vpc-054014d0b6e69bd6c"
            },
            "timeouts": null,
            "vpc_id": "vpc-054014d0b6e69bd6c"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.web_app.aws_vpc.webapp_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.web_app",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public_rt",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:098262602923:route-table/rtb-0bd36a1dd31739c5f",
            "id": "rtb-0bd36a1dd31739c5f",
            "owner_id": "098262602923",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0ffd9b388a7aa9e7e",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "public_route_table-vpc-054014d0b6e69bd6c"
            },
            "tags_all": {
              "Name": "public_route_table-vpc-054014d0b6e69bd6c"
            },
            "timeouts": null,
            "vpc_id": "vpc-054014d0b6e69bd6c"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.web_app.aws_internet_gateway.webapp_igw",
            "module.web_app.aws_vpc.webapp_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.web_app",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private_subnet_association",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0819516ed4de23cc0",
            "route_table_id": "rtb-0e28b84cb9e86dc3f",
            "subnet_id": "subnet-0e39d9ba5c30a9dd2"
          },
          "dependencies": [
            "module.web_app.aws_route_table.private_rt",
            "module.web_app.aws_subnet.private_subnet",
            "module.web_app.aws_vpc.webapp_vpc",
            "module.web_app.data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-068c6cc2d9d1f3d87",
            "route_table_id": "rtb-0e28b84cb9e86dc3f",
            "subnet_id": "subnet-05c81309dc8bdff8e"
          },
          "dependencies": [
            "module.web_app.aws_route_table.private_rt",
            "module.web_app.aws_subnet.private_subnet",
            "module.web_app.aws_vpc.webapp_vpc",
            "module.web_app.data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-02bd8197dc9f72d05",
            "route_table_id": "rtb-0e28b84cb9e86dc3f",
            "subnet_id": "subnet-0ac13da966dbceb50"
          },
          "dependencies": [
            "module.web_app.aws_route_table.private_rt",
            "module.web_app.aws_subnet.private_subnet",
            "module.web_app.aws_vpc.webapp_vpc",
            "module.web_app.data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "module": "module.web_app",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public_subnet_association",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-014eb44b788c1b1a7",
            "route_table_id": "rtb-0bd36a1dd31739c5f",
            "subnet_id": "subnet-0b224ca2b927f5606"
          },
          "dependencies": [
            "module.web_app.aws_internet_gateway.webapp_igw",
            "module.web_app.aws_route_table.public_rt",
            "module.web_app.aws_subnet.public_subnet",
            "module.web_app.aws_vpc.webapp_vpc",
            "module.web_app.data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-014c53a94d6263c6a",
            "route_table_id": "rtb-0bd36a1dd31739c5f",
            "subnet_id": "subnet-06a3af3bd8723bdc4"
          },
          "dependencies": [
            "module.web_app.aws_internet_gateway.webapp_igw",
            "module.web_app.aws_route_table.public_rt",
            "module.web_app.aws_subnet.public_subnet",
            "module.web_app.aws_vpc.webapp_vpc",
            "module.web_app.data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0392d6e71bb802aa3",
            "route_table_id": "rtb-0bd36a1dd31739c5f",
            "subnet_id": "subnet-01983059374e07dc3"
          },
          "dependencies": [
            "module.web_app.aws_internet_gateway.webapp_igw",
            "module.web_app.aws_route_table.public_rt",
            "module.web_app.aws_subnet.public_subnet",
            "module.web_app.aws_vpc.webapp_vpc",
            "module.web_app.data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "module": "module.web_app",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "app_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:098262602923:security-group/sg-0b0c8ac21e087610c",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 3306,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 3306
              }
            ],
            "id": "sg-0b0c8ac21e087610c",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 5050,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 5050
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "application20230303044828889400000002",
            "name_prefix": "application",
            "owner_id": "098262602923",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "ec2-sg-2023-03-03T04:48:28Z"
            },
            "tags_all": {
              "Name": "ec2-sg-2023-03-03T04:48:28Z"
            },
            "timeouts": null,
            "vpc_id": "vpc-054014d0b6e69bd6c"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.web_app.aws_vpc.webapp_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.web_app",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "db_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:098262602923:security-group/sg-0a44a9f649db0346c",
            "description": "Security group for RDS instance for database",
            "egress": [],
            "id": "sg-0a44a9f649db0346c",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 3306,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0b0c8ac21e087610c"
                ],
                "self": false,
                "to_port": 3306
              }
            ],
            "name": "database",
            "name_prefix": "",
            "owner_id": "098262602923",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "database-sg-2023-03-03T04:48:31Z"
            },
            "tags_all": {
              "Name": "database-sg-2023-03-03T04:48:31Z"
            },
            "timeouts": null,
            "vpc_id": "vpc-054014d0b6e69bd6c"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.web_app.aws_security_group.app_sg",
            "module.web_app.aws_vpc.webapp_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.web_app",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private_subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:098262602923:subnet/subnet-0e39d9ba5c30a9dd2",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.0.3.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0e39d9ba5c30a9dd2",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "098262602923",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "private_subnet-vpc-054014d0b6e69bd6c-1"
            },
            "tags_all": {
              "Name": "private_subnet-vpc-054014d0b6e69bd6c-1"
            },
            "vpc_id": "vpc-054014d0b6e69bd6c"
          },
          "dependencies": [
            "module.web_app.aws_vpc.webapp_vpc",
            "module.web_app.data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:098262602923:subnet/subnet-05c81309dc8bdff8e",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az4",
            "cidr_block": "10.0.4.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-05c81309dc8bdff8e",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "098262602923",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "private_subnet-vpc-054014d0b6e69bd6c-2"
            },
            "tags_all": {
              "Name": "private_subnet-vpc-054014d0b6e69bd6c-2"
            },
            "vpc_id": "vpc-054014d0b6e69bd6c"
          },
          "dependencies": [
            "module.web_app.aws_vpc.webapp_vpc",
            "module.web_app.data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:098262602923:subnet/subnet-0ac13da966dbceb50",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1c",
            "availability_zone_id": "use1-az6",
            "cidr_block": "10.0.5.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0ac13da966dbceb50",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "098262602923",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "private_subnet-vpc-054014d0b6e69bd6c-3"
            },
            "tags_all": {
              "Name": "private_subnet-vpc-054014d0b6e69bd6c-3"
            },
            "vpc_id": "vpc-054014d0b6e69bd6c"
          },
          "dependencies": [
            "module.web_app.aws_vpc.webapp_vpc",
            "module.web_app.data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "module": "module.web_app",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public_subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:098262602923:subnet/subnet-0b224ca2b927f5606",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.0.0.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0b224ca2b927f5606",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "098262602923",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "public_subnet-vpc-054014d0b6e69bd6c-1"
            },
            "tags_all": {
              "Name": "public_subnet-vpc-054014d0b6e69bd6c-1"
            },
            "vpc_id": "vpc-054014d0b6e69bd6c"
          },
          "dependencies": [
            "module.web_app.aws_vpc.webapp_vpc",
            "module.web_app.data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:098262602923:subnet/subnet-06a3af3bd8723bdc4",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az4",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-06a3af3bd8723bdc4",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "098262602923",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "public_subnet-vpc-054014d0b6e69bd6c-2"
            },
            "tags_all": {
              "Name": "public_subnet-vpc-054014d0b6e69bd6c-2"
            },
            "vpc_id": "vpc-054014d0b6e69bd6c"
          },
          "dependencies": [
            "module.web_app.aws_vpc.webapp_vpc",
            "module.web_app.data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:098262602923:subnet/subnet-01983059374e07dc3",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1c",
            "availability_zone_id": "use1-az6",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-01983059374e07dc3",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "098262602923",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "public_subnet-vpc-054014d0b6e69bd6c-3"
            },
            "tags_all": {
              "Name": "public_subnet-vpc-054014d0b6e69bd6c-3"
            },
            "vpc_id": "vpc-054014d0b6e69bd6c"
          },
          "dependencies": [
            "module.web_app.aws_vpc.webapp_vpc",
            "module.web_app.data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "module": "module.web_app",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "webapp_vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:098262602923:vpc/vpc-054014d0b6e69bd6c",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-03acecacaef8e0fdb",
            "default_route_table_id": "rtb-04395c98bd328e363",
            "default_security_group_id": "sg-00a1123f65d872d81",
            "dhcp_options_id": "dopt-03fb1ebb7643bfbcc",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-054014d0b6e69bd6c",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-04395c98bd328e363",
            "owner_id": "098262602923",
            "tags": {
              "Name": "Dev Vpc"
            },
            "tags_all": {
              "Name": "Dev Vpc"
            }
          }
        }
      ]
    }
  ]
}